fix zoom scale on Firefox

--- a/themes/mirror/static/css/style.css
+++ b/themes/mirror/static/css/style.css
@@ -23,6 +23,7 @@ html.ios body {
     background-repeat: no-repeat;
     display: inline-block;
     zoom: 0.65;
+    -moz-transform: scale(0.65);
 }
 @media (min--moz-device-pixel-ratio: 1.5), (-o-min-device-pixel-ratio: 3/2), (-webkit-min-device-pixel-ratio: 1.5), (min-device-pixel-ratio: 1.5), (min-resolution: 1.5dppx) {
     .sprite {
